lesson_4/k8s/otus-lesson-4-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: otus
  labels:
    istio-injection: enabled # Enable Istio sidecar injection for namespace
