lesson_4/k8s/otus-lesson-4-application-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson-4-deployment # The resource name
  namespace: otus
  labels:
    app: lesson-4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lesson-4
  template:
    metadata:
      labels:
        app: lesson-4
    spec:
      containers:
        - name: otus-lesson-4 # The container name
          image: dmitryprigozhaev/lesson-4:latest
          imagePullPolicy: Always # Always pull the latest image
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe: # Check pod init
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
              httpHeaders:
                - name: Custom-Header
                  value: OTUS
            initialDelaySeconds: 30 # Timeout before first request
            periodSeconds: 20       # Survey frequency
          livenessProbe: # Check pod status
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
              httpHeaders:
                - name: Custom-Header
                  value: OTUS
            initialDelaySeconds: 30 # Timeout before first request
            periodSeconds: 20       # Survey frequency
        - name: tcpflow # to debug
          image: appropriate/tcpflow
          imagePullPolicy: IfNotPresent
        - name: mariadb # to debug db connect
          image: mariadb
          imagePullPolicy: IfNotPresent
          command:
            - sleep
            - "1000"
