lesson_4/k8s/otus-lesson-4-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: lesson-4-gateway
  namespace: otus
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8000
        name: http
        protocol: HTTP
      hosts:
        - "*"
