lesson_4/k8s/otus-lesson-4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesson-4-ingress
  namespace: otus
spec:
  ingressClassName: nginx # kube v1.22+
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lesson-4-service
                port:
                  number: 8000
